Реализовать получение всех активов (6.4 сервер) (#44)
* add company, price and asset classes

* add diversification with connection without count field

* add favourites to user

* add annotations

* upgrade diversification and asset relationship

* add test requests and favouriteBy in user

* moved openapi

* change api and delete redundant controllers

* implement assets

* remove redundant file

* extract isAssetFavourite method

* fix annotation

* move methods from utils class to asset class

* remove redundant risk table
