# server/src/main/java/ru/spbstu/tesseract/controller/AssetController.java
@@ -1,0 +1,33 @@
+package ru.spbstu.tesseract.controller;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+import ru.spbstu.tesseract.dto.AssetShortDto;
+import ru.spbstu.tesseract.service.AssetService;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("/api/v1")
+@RequiredArgsConstructor
+public class AssetController {
+
+    private final AssetService assetService;
+
+    @GetMapping("/assets")
+    public ResponseEntity<List<AssetShortDto>> assets(
+            @RequestParam(value = "pageNumber", defaultValue = "0") Integer pageNumber,
+            @RequestParam(value = "pageSize", defaultValue = "10") Integer pageSize
+    ) {
+        List<AssetShortDto> assetShortDtos = assetService.getAssets(pageNumber, pageSize);
+
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(assetShortDtos);
+    }
+}
